src/Editor/LibreLancer.ImUI/ImPlot/ImPlotNative.cs


    [DllImport("cimgui")]
    public static extern void ImPlot_PlotImage(byte* label_id,ImTextureRef tex_reference,ImPlotPoint bounds_min,ImPlotPoint bounds_max,Vector2 uv0,Vector2 uv1,Vector4 tint_col,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotInfLines_FloatPtr(byte* label_id,float* values,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotInfLines_doublePtr(byte* label_id,double* values,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotInfLines_S16Ptr(byte* label_id,short* values,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotInfLines_U16Ptr(byte* label_id,ushort* values,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotInfLines_S32Ptr(byte* label_id,int* values,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotInfLines_U32Ptr(byte* label_id,uint* values,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotInfLines_S64Ptr(byte* label_id,long* values,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotInfLines_U64Ptr(byte* label_id,ulong* values,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotLine_FloatPtrInt(byte* label_id,float* values,int count,double xscale,double xstart,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotLine_doublePtrInt(byte* label_id,double* values,int count,double xscale,double xstart,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotLine_S16PtrInt(byte* label_id,short* values,int count,double xscale,double xstart,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotLine_U16PtrInt(byte* label_id,ushort* values,int count,double xscale,double xstart,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotLine_S32PtrInt(byte* label_id,int* values,int count,double xscale,double xstart,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotLine_U32PtrInt(byte* label_id,uint* values,int count,double xscale,double xstart,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotLine_S64PtrInt(byte* label_id,long* values,int count,double xscale,double xstart,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotLine_U64PtrInt(byte* label_id,ulong* values,int count,double xscale,double xstart,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotLine_FloatPtrFloatPtr(byte* label_id,float* xs,float* ys,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotLine_doublePtrdoublePtr(byte* label_id,double* xs,double* ys,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotLine_S16PtrS16Ptr(byte* label_id,short* xs,short* ys,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotLine_U16PtrU16Ptr(byte* label_id,ushort* xs,ushort* ys,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotLine_S32PtrS32Ptr(byte* label_id,int* xs,int* ys,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotLine_U32PtrU32Ptr(byte* label_id,uint* xs,uint* ys,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotLine_S64PtrS64Ptr(byte* label_id,long* xs,long* ys,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotLine_U64PtrU64Ptr(byte* label_id,ulong* xs,ulong* ys,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotLineG(byte* label_id,delegate* unmanaged<int, void*, ImPlotPoint> getter,void* data,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotPieChart_FloatPtrPlotFormatter(IntPtr label_ids,float* values,int count,double x,double y,double radius,delegate* unmanaged<double, IntPtr, int, void*, int> fmt,void* fmt_data,double angle0,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotPieChart_doublePtrPlotFormatter(IntPtr label_ids,double* values,int count,double x,double y,double radius,delegate* unmanaged<double, IntPtr, int, void*, int> fmt,void* fmt_data,double angle0,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotPieChart_S16PtrPlotFormatter(IntPtr label_ids,short* values,int count,double x,double y,double radius,delegate* unmanaged<double, IntPtr, int, void*, int> fmt,void* fmt_data,double angle0,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotPieChart_U16PtrPlotFormatter(IntPtr label_ids,ushort* values,int count,double x,double y,double radius,delegate* unmanaged<double, IntPtr, int, void*, int> fmt,void* fmt_data,double angle0,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotPieChart_S32PtrPlotFormatter(IntPtr label_ids,int* values,int count,double x,double y,double radius,delegate* unmanaged<double, IntPtr, int, void*, int> fmt,void* fmt_data,double angle0,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotPieChart_U32PtrPlotFormatter(IntPtr label_ids,uint* values,int count,double x,double y,double radius,delegate* unmanaged<double, IntPtr, int, void*, int> fmt,void* fmt_data,double angle0,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotPieChart_S64PtrPlotFormatter(IntPtr label_ids,long* values,int count,double x,double y,double radius,delegate* unmanaged<double, IntPtr, int, void*, int> fmt,void* fmt_data,double angle0,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotPieChart_U64PtrPlotFormatter(IntPtr label_ids,ulong* values,int count,double x,double y,double radius,delegate* unmanaged<double, IntPtr, int, void*, int> fmt,void* fmt_data,double angle0,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotPieChart_FloatPtrStr(IntPtr label_ids,float* values,int count,double x,double y,double radius,byte* label_fmt,double angle0,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotPieChart_doublePtrStr(IntPtr label_ids,double* values,int count,double x,double y,double radius,byte* label_fmt,double angle0,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotPieChart_S16PtrStr(IntPtr label_ids,short* values,int count,double x,double y,double radius,byte* label_fmt,double angle0,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotPieChart_U16PtrStr(IntPtr label_ids,ushort* values,int count,double x,double y,double radius,byte* label_fmt,double angle0,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotPieChart_S32PtrStr(IntPtr label_ids,int* values,int count,double x,double y,double radius,byte* label_fmt,double angle0,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotPieChart_U32PtrStr(IntPtr label_ids,uint* values,int count,double x,double y,double radius,byte* label_fmt,double angle0,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotPieChart_S64PtrStr(IntPtr label_ids,long* values,int count,double x,double y,double radius,byte* label_fmt,double angle0,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotPieChart_U64PtrStr(IntPtr label_ids,ulong* values,int count,double x,double y,double radius,byte* label_fmt,double angle0,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotScatter_FloatPtrInt(byte* label_id,float* values,int count,double xscale,double xstart,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotScatter_doublePtrInt(byte* label_id,double* values,int count,double xscale,double xstart,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotScatter_S16PtrInt(byte* label_id,short* values,int count,double xscale,double xstart,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotScatter_U16PtrInt(byte* label_id,ushort* values,int count,double xscale,double xstart,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotScatter_S32PtrInt(byte* label_id,int* values,int count,double xscale,double xstart,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotScatter_U32PtrInt(byte* label_id,uint* values,int count,double xscale,double xstart,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotScatter_S64PtrInt(byte* label_id,long* values,int count,double xscale,double xstart,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotScatter_U64PtrInt(byte* label_id,ulong* values,int count,double xscale,double xstart,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotScatter_FloatPtrFloatPtr(byte* label_id,float* xs,float* ys,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotScatter_doublePtrdoublePtr(byte* label_id,double* xs,double* ys,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotScatter_S16PtrS16Ptr(byte* label_id,short* xs,short* ys,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotScatter_U16PtrU16Ptr(byte* label_id,ushort* xs,ushort* ys,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotScatter_S32PtrS32Ptr(byte* label_id,int* xs,int* ys,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotScatter_U32PtrU32Ptr(byte* label_id,uint* xs,uint* ys,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotScatter_S64PtrS64Ptr(byte* label_id,long* xs,long* ys,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotScatter_U64PtrU64Ptr(byte* label_id,ulong* xs,ulong* ys,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotScatterG(byte* label_id,delegate* unmanaged<int, void*, ImPlotPoint> getter,void* data,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotShaded_FloatPtrInt(byte* label_id,float* values,int count,double yreference,double xscale,double xstart,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotShaded_doublePtrInt(byte* label_id,double* values,int count,double yreference,double xscale,double xstart,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotShaded_S16PtrInt(byte* label_id,short* values,int count,double yreference,double xscale,double xstart,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotShaded_U16PtrInt(byte* label_id,ushort* values,int count,double yreference,double xscale,double xstart,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotShaded_S32PtrInt(byte* label_id,int* values,int count,double yreference,double xscale,double xstart,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotShaded_U32PtrInt(byte* label_id,uint* values,int count,double yreference,double xscale,double xstart,ImPlotSpec spec);
